--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "0.11.7"
+    "react-native-elements": "^1.0.0-beta8",
+    "react-native-web": "0.11.7",
+    "react-navigation": "git://github.com/Snailapp/react-navigation.git#2.18.4",
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0"
   },
   "scripts": {
+    "json-server": "json-server --watch json-server/db.json -p 3001 -d 2000",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
