--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-animatable": "1.2.4",
     "react-native-elements": "^1.2.7",
     "react-native-ratings": "^7.3.0",
     "react-native-swipeout": "2.3.3",
