--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.2",
     "expo": "~38.0.0",
+    "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "moment": "^2.29.0",
     "react": "~16.11.0",
