--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.2",
     "expo": "~38.0.0",
+    "expo-image-picker": "~8.3.0",
     "expo-mail-composer": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
