--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-native-community/netinfo": "^5.9.7",
     "expo": "~38.0.0",
     "expo-asset": "~8.1.7",
+    "expo-calendar": "~8.2.2",
     "expo-camera": "~8.3.1",
     "expo-image-manipulator": "~8.2.1",
     "expo-image-picker": "~8.3.0",
